<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.details.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#fff"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/english_uzbek_russain"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                 />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lineColor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/english"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:minHeight="100dp"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lineColor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/uzbek"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_uzbek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:minHeight="100dp"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lineColor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/russian"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_russian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:minHeight="100dp"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:id="@+id/v_synonm"
            android:background="@color/lineColor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/synonym"
            android:id="@+id/tv_syn"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_synonm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>