<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ui.main.MainFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="?actionBarSize"
        android:layout_height="?actionBarSize"
        android:id="@+id/img_btn"
        android:layout_gravity="end"
        android:background="?selectableItemBackground"
        android:src="@drawable/ic_baseline_info_24" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:padding="32dp"
        android:src="@drawable/logo" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_english_words"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/cardBackColor"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:letterSpacing="0.1"
                android:text="@string/english"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_uzb_words"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/cardBackColor"
        app:cardCornerRadius="8dp"

        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:letterSpacing="0.1"
                android:text="@string/uzbek"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_russian_words"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/cardBackColor"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:letterSpacing="0.1"
                android:text="@string/russian"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>